--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,13 +1,45 @@
+:root {
+  --amarillo: #eac926;
+  --azul: #03264c;
+  --celeste: #1259c3;
+  --gris-oscuro: #666;
+  --gris-claro: #ebebeb;
+  --verde: #39b54a;
+}
+
+header {
+  background-color: var(--amarillo);
+  font-family: "Roboto", sans-serif;
+}
+
+section {
+  background-color: var(--gris-claro);
+}
 article img {
   width: 100%;
 }
 
-/* .section article:lnth-child(2) {
-  font-weight: bold;
-  background-color: red;
-} */
+p {
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+}
 
-/* NO ME ANDUVO EL*/
-.section article:last-child {
-  font-weight: bold;
+.titulares {
+  font-size: 24px;
+  font-family: "Roboto", sans-serif;
+  background-color: var(--gris-claro);
+}
+
+.precios {
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+}
+.descuentos {
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  color: var(--verde);
+}
+
+.descripciones {
+  font-size: 16px;
 }
