se agrega pagina estilos css de articulos

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -7,6 +7,36 @@
   --verde: #39b54a;
 }
 
+/* *******************CUSTOM**************  */
+/* Margin */
+.pd-top-10 {
+  padding-top: 10px;
+}
+.pd-bottom-10 {
+  padding-top: 10px;
+}
+.pd-left-10 {
+  padding-left: 10px;
+}
+.pd-right-10 {
+  padding-right: 10px;
+}
+/* Margin */
+.mr-top-10 {
+  margin-top: 10px;
+}
+.mr-bottom-10 {
+  margin-bottom: 10px;
+}
+.mr-left-10 {
+  margin-left: 10px;
+}
+
+.mr-right-10 {
+  margin-right: 10px;
+}
+
+/* ****************** END CUSTOM ************* */
 body {
   background-color: var(--gris-claro);
   margin: 0 !important;
@@ -14,11 +44,6 @@ body {
 
 #nav-menu {
   font-size: 13px;
-}
-
-.logo {
-  margin-top: 15px;
-  width: 20%;
 }
 
 ul {
@@ -34,18 +59,31 @@ a {
 #encabezado {
   background-color: var(--amarillo);
 }
+.logo-ml {
+  width: 20%;
+}
+.header-barra-busqueda-container {
+  display: flex;
+  flex-direction: column;
+}
+.header-logo-busqueda {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+}
+.lupa {
+  background-color: white;
+}
 
 .barra-busqueda-container {
-  width: 100%;
+  /* width: 100%;
   margin-top: 10px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
-.barra-busqueda-container .barra-busqueda {
-  width: 50%;
-}
+
 .menu-container {
   width: 100%;
   display: flex;
@@ -122,16 +160,17 @@ article {
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-top: 20px;
+    margin-bottom: 20px; */
   }
   article {
-    width: 80%;
+    width: 70%;
     background-color: white;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 20px;
     border-radius: 8px;
+    border: #ebebeb;
   }
   .logo {
     width: 50%;
@@ -142,28 +181,39 @@ article img {
 }
 .main-article-detail-container {
   padding-left: 10px;
+  border-top: 1px solid #ebebeb;
+}
+.article-truck-container {
+  margin: -14px;
+  text-align: end;
 }
 
 .fa-truck {
-  color: rgb(48, 199, 2);
-  border: solid 1px rgb(48, 199, 2);
+  color: #39b54a;
+  border: solid 1px #ebebeb;
   padding: 5px 5px 5px 5px;
   border-radius: 80%;
+  position: relative;
+  bottom: 1px;
+  margin-right: 30px;
+}
+.article-price-discount-container {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
 }
 .main-article-detail-container .precios {
-  font-size: 18px;
-  margin: 0px;
-  margin-top: 5px;
   color: black;
+  margin-right: 5px;
 }
 .main-article-detail-container .descuentos {
   font-size: 16px;
-  margin: 0px;
-  margin-top: 5px;
   color: var(--verde);
 }
 .main-article-detail-container .descripcion {
-  margin-top: 10px;
+  font-size: 16px;
+  margin-top: 0px;
+  margin-bottom: 10px;
   color: var(--gris-oscuro);
 }
 
